116-checkpoint/complex/k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432   # specifies what port other pods inside the cluster can connect to this service managed pods
      targetPort: 5432  # specifies the target port inside the container
