116-checkpoint/complex/k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379   # specifies what port other pods inside the cluster can connect to this service managed pods
      targetPort: 6379  # specifies the target port inside the container
