116-checkpoint/complex/k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5050   # specifies what port other pods inside the cluster can connect to this service managed pods
      targetPort: 5000  # specifies the target port inside the container
