116-checkpoint/complex/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-replacement
spec:
  parentRefs:
  - name: web-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: server-cluster-ip-service
      port: 5050

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: client-cluster-ip-service
      port: 3050
